# dsa110-continuum

./: .gitignore  .markdownlint.json  CLAUDE.md  CONTEXT.md  Makefile  WORKSPACE_GUIDE.md  pyproject.toml
.github/workflows/: docs.yml  python-tests.yml
docs/adr/: 0001-canonical-hourly-epoch-coadd.md  0002-observability-auth-posture.md
docs/operations/: dashboard.md
docs/quarto/: _quarto.yml  dsacamera-live-monitor.qmd  h17-live-monitor.qmd  index.qmd  pipeline-tutorial.qmd
docs/reference/: mosaicking.md  photometry-and-ese.md
docs/validation/: promotion-log.md
dsa110_continuum/: __init__.py  _compat.py  _lazy_init.py  unified_config.py
dsa110_continuum/calibration/: __init__.py  applycal.py  bandpass_diagnostics.py  bandpass_report.py  beam_docker.py  calibration.py  casa_process.py  casa_service.py  catalog_registry.py  catalogs.py  dec_utils.py  epoch_gaincal.py  field_directions.py  flagging.py  flagging_amplitude.py  flagging_bad_pols.py  flagging_cflag.py  flagging_preflight.py  flagging_rfi.py  gain_report.py  gpu_calibration.py  guardrails.py  jobs.py  model.py  mosaic_scheduler.py  pipeline.py  preconditions.py  qa.py  qa_compare.py  rfi_adaptive_enhanced.py  rfi_adaptive_thresholds.py  rfi_preflight.py  runner.py  schedule.py  selfcal.py  selfcal_routine.py  skymodels.py  solve_bandpass.py  solve_delay.py  solve_gains.py  (+5 more)
dsa110_continuum/catalog/: blacklist_sources.py  build_master.py  calibrator_integration.py  calibrator_registry.py  flux_monitoring.py  grouping.py  spectral_index.py  variable_source_detection.py
dsa110_continuum/conversion/: __init__.py  calibrator_ms_generator.py  conversion_orchestrator.py  direct_subband.py  file_validator.py  helpers.py  helpers_antenna.py  helpers_coordinates.py  helpers_model.py  helpers_telescope.py  helpers_validation.py  merge_spws.py  ms_utils.py  normalize.py  writers.py
dsa110_continuum/dashboard/: __init__.py  lightcurve_panel.py
dsa110_continuum/database/: __init__.py  data_config.py  data_registry.py  hdf5_group_by_metadata.py  hdf5_index.py  models.py  pipeline_metrics.py  provenance.py  schema.sql  schema_guard.py  session.py  tracking.py  unified.py
dsa110_continuum/evaluation/: __init__.py  config_loader.py  database.py  harness.py  html_report.py  stages.py
dsa110_continuum/evidence/: hdf5_calibrator_tile_smoke.py
dsa110_continuum/imaging/: __init__.py  checkpoint.py  cli.py  cli_imaging.py  export.py  fov.py  gpu_gridding.py  imaging_report.py  spw_imaging.py  worker.py
dsa110_continuum/mosaic/: __init__.py  builder.py  error_handling.py  jobs.py  jobs_wsclean.py  orchestrator.py  pipeline.py  production.py  qa.py  science_jobs.py  wsclean_mosaic.py
dsa110_continuum/observability/: __init__.py  artifacts.py  caltable_qa.py  control.py  dagster_defs.py  hour_state.py  job_state.py  mosaic_preview.py  ms_qa.py  tile_qa.py
dsa110_continuum/orchestration/: __init__.py  maistro.py
dsa110_continuum/photometry/: __init__.py  adaptive_photometry.py  aegean_fitting.py  cli.py  ese_detection.py  ese_detection_enhanced.py  ese_pipeline.py  forced.py  manager.py  phot_csv.py  photometry_report.py  source.py  source_monitoring_report.py  variability.py  worker.py
dsa110_continuum/pointing/: monitor.py  transit_selection.py  utils.py
dsa110_continuum/qa/: __init__.py  calibration_quality.py  calibration_stability_tracker.py  catalog_validation.py  delay_validation.py  image_metrics.py  noise_model.py  pipeline_hooks.py  pre_imaging_qa_report.py  provenance.py  rfi_metrics.py  run_report.py  uvw_validation.py
dsa110_continuum/rfi/: __init__.py  gpu_detection.py
dsa110_continuum/search/: fts_setup.py
dsa110_continuum/selfcal/: selfcal_report.py
dsa110_continuum/simulation/: __init__.py  control.py  fast_uvw.py  ground_truth.py  make_synthetic_uvh5.py  metrics.py  simulate_tile_fits.py  simulation_config.py  time_domain.py  validation.py  visibility_models.py
dsa110_continuum/spectral/: spectral_analysis_report.py
dsa110_continuum/templates/: bandpass_report.html  dev_portal.html  diagnostic_report.html  fits_viewer_index.html  fits_viewer_page.html  pipeline_dashboard.html  shared_styles.css
dsa110_continuum/utils/: __init__.py  angles.py  antenna_classification.py  casa_init.py  cli_helpers.py  constants.py  coordinates.py  decorators.py  env_utils.py  error_context.py  exceptions.py  fast_meta.py  fits_utils.py  gpu_safety.py  gpu_utils.py  hdf5_io.py  ms_helpers.py  ms_locking.py  ms_permissions.py  naming.py  numba_accel.py  performance.py  progress.py  run_isolation.py  runtime_safeguards.py  (+8 more)
requirements/: cloud-safe-tests.txt
scripts/: artifact_pages.py  auto_pipeline.py  batch_pipeline.py  check_contimg_mentions.py  check_import_migration.py  dashboard_server.py  forced_photometry.py  mosaic_day.py  qa_server.py  run_cloud_safe_tests.py  run_dashboard.sh  run_maistro_canary.py  validate_mosaic_astrometry.py
tests/: conftest.py  test_artifact_substrate.py  test_auto_pipeline.py  test_bad_pol_wiring_smoke.py  test_batch_e2_hygiene.py  test_batch_pipeline_dry_run_quarantine.py  test_calibrator_ms_generator.py  test_caltable_pages.py  test_casa_runtime.py  test_cloud_collection_optional_imports.py  test_conversion_coordinates_hardening.py  test_conversion_writer_imports.py  test_dashboard_server.py  test_docs_monitor_workflow.py  test_epoch_gaincal.py  test_field_directions.py  test_flagging_cflag.py  test_force_recal_bandpass.py  test_imaging_worker_no_fast_imaging.py  test_import_migration_checker.py  test_init_reexports_new_namespace.py  test_job_state.py  test_lightcurve_panel.py  test_maistro_control_plane.py  test_metrics_canonical.py  test_mosaic_cli_entrypoint.py  test_mosaic_import_no_dagster.py  test_mosaic_production_coadd.py  test_mosaic_ra_wrap.py  test_mosaic_sault_coadd.py  test_ms_pages.py  test_no_compat_layer.py  test_no_latent_nameerror_imports.py  test_no_stale_contimg_api_refs.py  test_observability_control.py  test_observability_hour_state.py  test_observability_mosaic_preview.py  test_package_health.py  test_paths_resolver.py  test_phot_csv.py  (+21 more)
(+111 files in other folders)
